Began Implementing firebase DB added .env to hide secure info.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h1>Gym Tracker</h1>
         <h3>Be all you can be.</h3>
       </div>
-        <img class="hero-img" src="/public/img/gym man front.jpg">
+        <img class="hero-img" src="/img/gym man front.jpg">
     </div>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
