re added img lost during merge.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
   <title>Gym Tracker</title>
 </head>
 <body>
+    <nav class="nav">
+      <div class="logo">Gym Tracker</div>
+      <div class="menu">
+        <a href="#home">Home</a>
+        <a href="#workouts">Workouts</a>
+        <a href="#progress">Progress</a>
+        <a href="#profile">Profile</a>
+      </div>
+    </nav>  
+    <div class="hero">
+      <div class="hero-info">
+        <h1>Gym Tracker</h1>
+        <h3>Be all you can be.</h3>
+      </div>
+        <img class="hero-img" src="/img/gym man front.jpg">
+    </div>
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
