--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
   <div id="root"></div>
-  <footer className="" id="footer" >
-    <div> Gym App by D.Jr.</div>
-    <div>All rights reserved &copy; 2024</div>
-  </footer>
+    <footer >
+      <div> Gym App by D.Jr.</div>
+      <div>All rights reserved &copy; 2024</div>
+    </footer>
 
     <script type="module" src="/src/main.tsx"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
