Updated color theme, tested fixed minor issues. Updated icons and login image. Added key stroke to handle login.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gym Tracker</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Space+Mono&family=Suez+One&display=swap" rel="stylesheet">
   <link rel="icon" type="image/png" sizes="32x32" href="/public/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/public/icons/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100" style="min-width: 360px;" >
     <script type="module" src="/src/main.jsx"></script>
     
-  <div id="root"></div>
-    <footer >
+  <div id="root" class="flex-grow-1 text-center"></div>
+    <footer class="bg-dark text-primary text-center mt-5">
       <div> Gym App by D.Jr.</div>
       <div>All rights reserved &copy; 2024</div>
     </footer>
-
 </body>
 
 </html>
