Fixed login/register error issues.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Space+Mono&family=Suez+One&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" sizes="32x32" href="/public/icons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/public/icons/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 </head>
 <body class="d-flex flex-column min-vh-100" style="min-width: 360px;" >
