--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
   <div id="root" class="flex-grow-1 text-center"></div>
     <footer class="bg-dark text-primary text-center mt-5">
       <div> Gym App by D.Jr.</div>
-      <div>All rights reserved &copy; 2024</div>
+      <div>All rights reserved &copy; 2025</div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-..." crossorigin="anonymous"></script>
 </body>
 
 </html>
